[tool.poetry]
name = "time"
version = "0.1.0"
description = ""
authors = ["Paxwell-Paxwell <pompom231245@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
ipykernel = "^6.25.0"


[tool.poetry.scripts]
test = "timee:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

